upgrade deps, shitty proc macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 # this is broken up as a workspace because proc macros have
 # to be at the root level of the crate
 [workspace]
+resolver = "2"
 members = [
     "gpkg",
-    "gpkg-derive",
 ]
