--- a/gpkg-derive/Cargo.toml
+++ b/gpkg-derive/Cargo.toml
@@ -10,10 +10,11 @@ description = "Internal crate used for derive macros in gpkg crate"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syn = {version = "1.0", features = ["parsing", "extra-traits"]}
+syn = {version = "2.0", features = ["parsing", "extra-traits"]}
 quote = "1.0" 
 proc-macro2 = "1.0"
-lazy_static = "1.4.0"
+lazy_static = "1.5"
+deluxe = "0.5.0"
 
 [lib]
 proc-macro = true
