--- a/gpkg-derive/Cargo.toml
+++ b/gpkg-derive/Cargo.toml
@@ -2,12 +2,9 @@
 name = "gpkg-derive"
 version = "0.3.0"
 edition = "2021"
-homepage = "https://github.com/cjriley9/gpkg-rs"
-repository = "https://github.com/cjriley9/gpkg-rs"
+repository = "https://github.com/jmspae/gpkg-rs"
 license = "MIT OR Apache-2.0"
 description = "Internal crate used for derive macros in gpkg crate"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 syn = {version = "2.0", features = ["parsing", "extra-traits"]}
@@ -19,5 +16,3 @@ deluxe = "0.5.0"
 [lib]
 proc-macro = true
 path = "lib.rs"
-
-[homepage]
