--- a/gpkg/Cargo.toml
+++ b/gpkg/Cargo.toml
@@ -2,12 +2,9 @@
 name = "gpkg"
 version = "0.3.0"
 edition = "2021"
-homepage = "https://github.com/cjriley9/gpkg-rs"
-repository = "https://github.com/cjriley9/gpkg-rs"
+repository = "https://github.com/jmspae/gpkg-rs"
 license = "MIT OR Apache-2.0"
 description = "Rust library for working with GeoPackages"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rusqlite = { version = "0.37", features = ["bundled"] }
